crates/apollo-compiler/test_data/diagnostics/0083_type_introspection_from_disallowed_type.txt
Error: type `Product` does not have a field `__type`
    ╭─[0083_type_introspection_from_disallowed_type.graphql:4:5]
    │
  4 │     __type(name: "User") {
    │     ───┬──  
    │        ╰──── field `__type` selected here
    │ 
 24 │ type Product {
    │      ───┬───  
    │         ╰───── type `Product` defined here
    │ 
    │ Note: path to the field: `query getProduct → topProducts → __type`
────╯

